# clawbench

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md
.claude/skills/generate-workbench-app/: SKILL.md
.githooks/: post-commit
.github/workflows/: ci.yml
backend/: .env.example  .env.mysql  .env.postgres  .env.production  .gitignore  README.md  SETUP.md  docker-compose.yml  ecosystem.config.js  jest.config.js  package-lock.json  package.json  sop.sh
backend/admin-panel/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/admin-panel/src/: App.tsx  main.tsx
backend/public/admin/: index.html
backend/src/: app.ts  index.ts
backend/src/__tests__/: application.test.ts  applicationCreate.test.ts  (+17 more)
docs/: AI_CHAT.md  AI_CODING.md  AI_TERMINAL.md  AI_WORKBENCH.md  API_DOCUMENTATION.md  APP_LOGGING.md  APP_MARKETPLACE.md  COPIPER.md  COPIPER_DATA_STRUCT.md  COPIPER_FEISHU_SYNC.md  JDB2LUBAN_PLAN.md  OPENCLAW.md  PROJECT_STATUS.md  README.md  RELEASE.md  TODO.md  UI_GUIDE.md  UI_REFERENCE.md
frontend/: .env.example  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
frontend/python-sdk/: pyproject.toml
frontend/python-sdk/clawbench_sdk/: __init__.py  base_app.py  output.py  params.py  ui.py
frontend/python-sdk/tests/: test_slot_protocol.py
frontend/resources/: icon.icns
frontend/scripts/: after-pack.mjs  upload-release.mjs
frontend/tools/: create_ui_app.py  debug_app_scan.js  test_ui_system.py  verify_user_app.sh
(+521 files in other folders)
